# API-Odoo

./: .env.example  .gitignore  Dockerfile  README.md  SETUP_CICD.md  fly.toml  main.py  pyproject.toml  requirements.txt
.github/: README_CICD.md  dependabot.yml
.github/workflows/: dependabot.yml  deploy.yml  pr-validation.yml
app/: main.py
app/Services/: company_service.py  crm_service.py  health_service.py  helpdesk_service.py  migracao.py  sales_orders.py  tasks_project_service.py
app/config/: settings.py
app/routers/: analytics_endpoints.py  company_endpoints.py  crm_endpoints.py  cron_jobs_endpoints.py  custom_fields_endpoints.py  fields_inspection_endpoints.py  health_endpoints.py  helpdesk_endpoints.py  migracao_endpoints.py  sales_orders_endpoints.py  tasks_endpoints.py
app/schemas/: schemas.py
app/services/: async_odoo_client.py  authentication.py  company_service.py  crm_service.py  crm_service_optimized.py  custom_fields_service.py  fields_inspection_service.py  health_service.py  helpdesk_service.py  migracao.py  sales_analytics_service.py  sales_orders.py  stale_opportunities_service.py  tasks_project_service.py
app/utils/: utils.py
docs/: helpdesk-docs.md  helpdesk-sequence.mermaid
src/api/: company_endpoints.py  crm_endpoints.py
src/config/: settings.py
src/models/: models.py
src/odoo_connector/: authentication.py  company_service.py  crm_service.py
tests/: README_TESTES.md  conftest.py  helpdesk_tests.py  test_create_opportunity_examples.py  test_opportunities.py
