[project]
name = "api-odoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.6.2.post1",
    "fastapi[standard]>=0.115.6",
    "pydantic>=2.10.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-tornasync>=0.6.0.post2",
    "pytest-trio>=0.8.0",
    "pytest-twisted>=1.14.3",
    "pytest>=8.3.4",
    "scalar-fastapi>=1.0.3",
    "twisted>=24.10.0",
    "numpy>=2.2.4",
    "pandas>=2.3.0",
    "openpyxl>=3.1.5",
    "httpx>=0.28.1",
    "apscheduler>=3.11.0",
    "pytz>=2025.2",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations', 'tests']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.4",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]
